[metadata]
description_file = README.md
url = https://github.com/jgrss/geosample
license = LICENSE.txt
version = attr: geosample.__version__
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6 :: 3.7 :: 3.8 :: 3.9 :: 3.9 :: 3.11

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    setuptools>=59.5.0
    numpy>=1.19.0
python_requires = >=3.6,<=3.9.16
install_requires =
    attrs>=19.3.0
    click-plugins>=1.1.1
    click>=7.1.2
    cligj>=0.5.0
    fiona
    geopandas>=0.8.0
    joblib>=0.16.0
    munch>=2.5.0
    numpy>=1.19.0
    pandas>=1.0.5
    pyproj>=3.0.0,<=3.4.0
    python-dateutil>=2.8.1
    pytz>=2020.1
    scikit-learn>=0.23.1
    scipy>=1.5.1
    shapely>=1.7.0
    six>=1.15.0
    threadpoolctl>=3.1.0

[options.extras_require]
tests = testfixtures
    pre-commit
    black
    flake8
    docformatter
    isort

[options.packages.find]
where=src

[options.package_data]
* = *.md, *.txt
